# Gemini-API

./: .dockerignore  .env.example  .gitignore  .gitignore.docker  Dockerfile  FUNCTIONALITY_RU.md  LICENSE  README.md  README_DOCKER.md  SETUP_GUIDE.md  TROUBLESHOOTING_404.md  a.json  accounts.example.json  app.py  cli.py  docker-compose.yml  go.mod  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: github-release.yml  pypi-publish.yml
docs/: STREAMING_API_REFERENCE.md
examples/: advanced_usage.py  basic_usage.py  streaming_examples.py
examples/image_generation/: main.go
examples/simple_chat/: main.go
examples/streaming_chat/: main.go
gemini/: auth.go  client.go  constants.go  gemini_test.go  parsing.go  types.go  utils.go
openclaw-gateway/: .env.example  Dockerfile  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  api_server.py  config.py  docker-compose.yml  install.sh  requirements.txt
openclaw-gateway/handlers/: __init__.py  input_processor.py  model_router.py  output_handler.py  session_manager.py
openclaw-gateway/models/: __init__.py  requests.py  responses.py
openclaw-gateway/utils/: __init__.py  file_utils.py  validators.py
src/: test.py
src/gemini/: __init__.py  client.py  consts.py  exceptions.py  types.py  utils.py
src/gemini/types/: candidate.py  image.py
src/gemini_webapi/: __init__.py  cli.py  client.py  constant.py  constants.py  exceptions.py  pool.py  readme.md  utils.py
src/gemini_webapi/components/: __init__.py  chat_mixin.py  gem_mixin.py  research_mixin.py
src/gemini_webapi/types/: __init__.py  availablemodel.py  candidate.py  chathistory.py  chatinfo.py  chatlistpage.py  conversation.py  file.py  gem.py  grpc.py  image.py  modeloutput.py  research.py  researchresult.py  stream.py  video.py
src/gemini_webapi/utils/: __init__.py  decorators.py  get_access_token.py  logger.py  (+5 more)
tests/: __init__.py  basic_streaming_test.py  debug_parser.py  test_available_model.py  test_chat_metadata.py  test_cli.py  test_client_features.py  test_deep_research.py  test_gem_mixin.py  test_generate_content.py  test_html_entity_decode.py  test_parsing.py  test_research_workflow.py  test_rotate_cookies.py  test_save_image.py  test_stale_recovery_guard.py  test_stream_images.py  test_streaming_candidates.py  test_temporary_chat.py
